fix double borders on menues

--- a/gtk-3.0/widgets/headerbar.css
+++ b/gtk-3.0/widgets/headerbar.css
@@ -12,7 +12,3 @@ headerbar {
 searchbar {
     border-bottom-width: 1px;
 }
-
-decoration {
-    border-width: 1px;
-}
